Fix irritating z-index bug in message popup

--- a/assets/css/esamizdat.css
+++ b/assets/css/esamizdat.css
@@ -44,7 +44,7 @@ a:hover i {
   top: 10px;
   left: 0px;
   width: 100%;
-  z-index: 100;
+  z-index: 5;
 }
 
 #message {
@@ -151,7 +151,7 @@ body.scrolled.show-navi .navbar {
   border: none;
   min-height: 0px !important;
   position: relative;
-  z-index: 1;
+  z-index: 15;
 }
 
 #top-header .container-fluid {
@@ -245,6 +245,7 @@ body.scrolled.show-navi .navbar {
   -ms-transform: translateY(-110%);
   -o-transform: translateY(-110%);
   transform: translateY(-110%);
+  z-index: 10;
 }
 
 .has_book_info.book_info_open #book_info {
