--- a/assets/sass/_esamizdat.sass
+++ b/assets/sass/_esamizdat.sass
@@ -36,7 +36,7 @@ a:hover i
   top: 10px
   left: 0px
   width: 100%
-  z-index: 100
+  z-index: 5
 
 #message 
   position: relative
