--- a/assets/sass/_nav.sass
+++ b/assets/sass/_nav.sass
@@ -22,7 +22,7 @@ body.scrolled.show-navi .navbar
   border: none
   min-height: 0px !important
   position: relative
-  z-index: 1
+  z-index: 15
 
   .container-fluid 
     position: relative
@@ -94,6 +94,7 @@ body.scrolled.show-navi .navbar
   box-shadow: rgba(0, 0, 0, 0.3) -1px 4px 7px 0px
   @include transition(transform 0.4s ease-in-out)
   @include transform(translateY(-110%))
+  z-index: 10
 
   .has_book_info.book_info_open &
     @include transform(translateY(0))
